deployment.yaml
# Deploy the Agrolly Website
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrolly-web
  labels:
    app: agrolly-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrolly-web
  template:
    metadata:
      labels:
        app: agrolly-web
    spec:
      containers:
        - name: agrolly-web
          image: # Your image location here. Example "us.icr.io/agrolly-test/web:v1"
      imagePullSecrets:
        - name: # Your secrets here. Example all-icr-io

---
# Service for Agrolly Web
apiVersion: v1
kind: Service
metadata:
  name: agrolly-web-svc
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
spec:
  selector:
    app: agrolly-web
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000

---
# Ingress for Agrolly
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agrolly-ingress-web-resource
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
spec:
  tls:
    - hosts:
        -  # Your Ingress subdomain value here. Example: my-cluster-us-east-1-514bd37ab295f8aeaf548c9dacf89542-0000.us-east.containers.appdomain.cloud
      secretName: # Your Ingress secret value here. Example: my-cluster-us-east-1-514bd37ab295f8aeaf548c9dacf89542-0000
  rules:
    - host: # Host to be routed here. Example: agrolly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agrolly-web-svc
                port:
                  number: 4000
